<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutAppActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_about_app_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/action_about_app_doing_list_title" />

    <EditText
        android:id="@+id/editText_about_app_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/action_about_app_submit_doing_hint" >
    </EditText>

    <Button
        android:id="@+id/button_about_app_submit_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_about_app_submit_doing" />

    <ListView
        android:id="@+id/listView_user_back"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" >
    </ListView>

</LinearLayout>