<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DoingDetailActivity" >

    <TextView
        android:id="@+id/textView_doing_detail_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/doing_detail_loading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_doing_detail_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_doing_detail_same_time_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/view_doing_detail_1"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_below="@+id/textView_doing_detail_count"
        android:layout_centerHorizontal="true"
        android:background="#FF8800"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView_doing_detail_same_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_doing_detail_get_chievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_doing_detail_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/doing_detail_get_achievement_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <View
        android:id="@+id/view_doing_detail_2"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_below="@+id/textView_doing_detail_get_chievement"
        android:layout_centerHorizontal="true"
        android:background="#33B5E5"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView_doing_detail_chievement_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_doing_detail_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/doing_detail_achievement_null"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listView_doing_detail_chievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_doing_detail_2"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" >
    </ListView>

</RelativeLayout>